--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Program.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Program\FileSearch.cs" />
     <Compile Include="Program\Log.cs" />
     <Compile Include="Program\LrcDownLoad.cs" />
     <Compile Include="Program\LrcMain_Main.cs">
