--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Program\LrcMain_Main.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Program\PackageDeal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\Update.cs">
       <SubType>Form</SubType>
