增加了一个捐赠窗口，2.5版本开始开发。

--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Form\Lrc_Main.Designer.cs">
       <DependentUpon>Lrc_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\HelpMe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\HelpMe.Designer.cs">
+      <DependentUpon>HelpMe.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -100,6 +106,9 @@
     </Compile>
     <EmbeddedResource Include="Form\About.resx">
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\HelpMe.resx">
+      <DependentUpon>HelpMe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Lrc_Main.resx">
       <DependentUpon>Lrc_Main.cs</DependentUpon>
