--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -98,6 +98,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program\PackageDeal.cs" />
+    <Compile Include="Program\Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
