--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -57,9 +57,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>DLL\ID3.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Zony\Desktop\Newtonsoft.Json.dll</HintPath>
+      <HintPath>DLL\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DLL\ID3.dll" />
+    <Content Include="DLL\Newtonsoft.Json.dll" />
     <Content Include="Icon\6.ico" />
   </ItemGroup>
   <ItemGroup />
