--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -94,14 +94,18 @@
     <Compile Include="Program.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Program\LrcDownLoadClass\BaiDuLrcDownLoad.cs" />
     <Compile Include="Program\Config.cs" />
     <Compile Include="Program\FileSearch.cs" />
     <Compile Include="Program\Log.cs" />
     <Compile Include="Program\LrcDownLoad.cs" />
+    <Compile Include="Program\LrcDownLoadClass\CnLyricDownLoad.cs" />
+    <Compile Include="Program\LrcDownLoadClass\WYLrcDownLoad.cs" />
     <Compile Include="Program\LrcMain_Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program\PackageDeal.cs" />
+    <Compile Include="Program\Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
