修正删除与增加插件会导致程序崩溃的BUG。

--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -160,7 +160,9 @@
     <Content Include="Icon\search.ico" />
     <Content Include="Icon\Set.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ScreenShot\" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
       <Visible>False</Visible>
