--- a/Zony Lrc Download 2.0.csproj
+++ b/Zony Lrc Download 2.0.csproj
@@ -53,7 +53,13 @@
     <ApplicationIcon>Icon\6.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
@@ -68,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Class\Configs\Config.cs" />
     <Compile Include="Class\Configs\Ver.cs" />
+    <Compile Include="Class\Plugins\PlugStatus.cs" />
     <Compile Include="Class\Plugins\Untiy.cs" />
     <Compile Include="Class\UI\UI_From.cs">
       <SubType>Form</SubType>
@@ -137,6 +144,7 @@
     <EmbeddedResource Include="Window\Window_Plugins.resx">
       <DependentUpon>Window_Plugins.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
