--- a/Lib/SingleLyricSearch/SingleLyricSearch/LibNeteaseTmp.csproj
+++ b/Lib/SingleLyricSearch/SingleLyricSearch/LibNeteaseTmp.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F00E189D-D814-4B81-B392-145086C06C1D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SingleLyricSearch</RootNamespace>
-    <AssemblyName>SingleLyricSearch</AssemblyName>
+    <RootNamespace>LibNeteaseTmp</RootNamespace>
+    <AssemblyName>LibNeteaseTmp</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
